# library_transaction

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yml  dotenv_.py  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  swagger.yml
interfaces/: interface_index_ganaretor.py
project/: admins.py  apps.py  libraries.py  logs.py  models.py  postcresbase.py  transactions.py  views.py
project/interfaces/: interface_index_ganaretor.py
project/models_some/: model_autors.py  model_book.py  model_borrow.py  model_client.py  model_init.py  model_person.py
project/transaction_some/: ratnsaction_authors.py  transactin_basic.py  transaction_basic.py  transaction_book.py  transaction_books.py  transaction_borrow.py  transaction_person.py
project/veiws_some/: veiws_author.py  veiws_book.py  views_author.py  views_book.py  views_borrow.py  views_client.py
swagger/: swagger.yml  swagger_author.yaml
